--- a/ping/templates/ping/test.html
+++ b/ping/templates/ping/test.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <title></title>
-
+    <link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -26,8 +29,6 @@
             <th>label</th>
             <th>status</th>
             <th>programme</th>
-            <th>cadence</th>
-            <th>vitesse</th>
         </tr>
         </thead>
         <tbody>
@@ -38,16 +39,38 @@
                 <td>{{ rasp.label }}</td>
                 <td>{{ rasp.status }}</td>
                 <td>{{ rasp.programme }}</td>
-                <td>{{ rasp.cadence }}</td>
-                <td>{{ rasp.vitesse }}</td>
             </tr>
+        {% endfor %}
 
+        {% for rasp in raspb %}
+        <div id="donut-example" style="height: 200px;"></div>
+                <script>
+                    Morris.Donut({
+                    element: 'donut-example',
+                    data: [
+                    {label: "Cadence", value: {{ rasp.cadence }}}
+                      ]
+                    });
 
+                </script>
+            <div id="donut-example1" style="height: 200px;"></div>
+                <script>
+                    Morris.Donut({
+                    element: 'donut-example1',
+                    data: [
+                    {label: "Vitesse", value: {{ rasp.vitesse }}}
+                      ]
+                    });
+
+                </script>
         {% endfor %}
 
         </tbody>
     </table>
 </div>
+
+
+
 
 
 <script>
